<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:contentDescription="@string/content_description_logo_map"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_alarm_infos" />

    <CheckBox
        android:id="@+id/checkBox_isRecurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_detailed_isreccurent" />

    <LinearLayout
        android:id="@+id/layout_recurrence_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_recurrence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_view_recurrence"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_recurrence" />

            <Spinner
                android:id="@+id/spinner_recurrence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_time" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_cancel_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_button_cancel_alarm" />

    <Button
        android:id="@+id/button_validate_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_validate_alarm" />

</LinearLayout>